--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8084,3 +8084,12 @@ body.dark-mode-active .cart-item .cart-item-footer {
   width: 100%;
   height: 500px;
 }
+
+#eye {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 1.2rem;
+}
